--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -10,7 +10,7 @@
         <th>Email</th>
         <th>Phone</th>
         <th>Twitter</th>
-        <th> User ID </th>
+        <%# <th> User ID </th> %>
         
       </tr>
     </thead>
@@ -26,7 +26,7 @@
           <td><%= friend.email %> </td>
           <td><%= friend.phone %> </td>
           <td><%= friend.twitter %> </td>
-          <td><%= friend.user.id %> </td>
+          <%# <td><%= friend.user.id %> 
         </tr>
       <% end %>
      <% end %>
