Adding uncommited files in folder

--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -39,7 +39,10 @@
     new_friend_path, class: "btn btn-secondary" %>
 
 <% else %>
-  <h1>Hello World!</h1>
-This is my first Rails webpage
+  <br/>
+  <h1 class="text-center">Welcome to the Friends App</h1>
+  The Friends App allows you to create your own account and create a list of friends. The data of the friend list is personal and can only be viewed by the user signed in.
+  Currently, the information that can be stored is the friend's name, email address, phone number, and twitter handle. 
+
 
 <% end %>
