--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,7 +12,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
        
         <li class="nav-item">
-        	<%= link_to "About us", home_about_path, 
+        	<%= link_to "About me", home_about_path, 
         		class:"nav-link" %>
         </li>
         
