--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Hello World!</h1>
-This is my first Rails webpage
+<h1 class="text-center">Friends App</h1>
+This is my first Rails webpage.
+<br/>
+
+The Friends App allows you to create your own account and create a list of friends. The data of the friend list is personal and can only be viewed by the user signed in.
+Currently, the information that can be stored is the friend's name, email address, phone number, and twitter handle. 
